(executable
 (name main)
 (libraries base solver stdio)
 (modules Main))

(library
 (name solver)
 (libraries base nsplit)
 (modules Solver)
 (ppx_runtime_libraries ppx_compare ppx_sexp_conv)
 (preprocess (pps ppx_deriving.std ppx_compare ppx_sexp_conv)))

(library
 (name nsplit)
 (libraries base)
 (modules Nsplit))
